--- a/styles/contact.css
+++ b/styles/contact.css
@@ -17,6 +17,7 @@
 
 .contact__form__title {
     font: 700 16px/19px 'Raleway';
+    margin: .5rem 0;
 }
 
 .contact__form__item {
@@ -26,6 +27,8 @@
     height: 48px;
     padding: 4px;
     border-radius: 4px;
+    overflow: hidden;
+    margin: 8px 0px;
 }
 
 .contact__form__input {
@@ -39,7 +42,19 @@
     position: absolute;
     align-self: center;
     left: 4px;
-    transition: 0.5s;
+    pointer-events: none;
+    transition: all 0.5s ease;
+}
+
+.contact__form__slash {
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0px;
+    bottom: 0px;
+    background: var(--gris-70);
+    transition: all 0.5s ease;
+
 }
 
 .contact__form__input:valid,
@@ -52,6 +67,21 @@
     
     font: 300 12px 'Raleway';
     align-self: flex-start;
+    color: var(--azul-100);
 }
 
+.contact__form__input:valid ~ .contact__form__slash,
+.contact__form__input:focus ~ .contact__form__slash {
+    background: var(--azul-100);
+}
 
+.contact__form__textarea {
+    outline: 0;
+    border: 0;
+    font: 300 16px 'Raleway';
+}
+
+.contact__form__textarea:valid ~ .contact__form__slash,
+.contact__form__textarea:focus ~ .contact__form__slash {
+    background: var(--azul-100);
+}
