--- a/styles/contact.css
+++ b/styles/contact.css
@@ -24,6 +24,7 @@
     position: relative;
     display: flex;
     background: var(--blanco-100);
+    width: 100%;
     height: 48px;
     padding: 4px;
     border-radius: 4px;
@@ -84,4 +85,12 @@
 .contact__form__textarea:valid ~ .contact__form__slash,
 .contact__form__textarea:focus ~ .contact__form__slash {
     background: var(--azul-100);
+}
+
+.contact__form {
+    width: 40%;
+}
+
+.contact__logo__tablet {
+    display: none;
 }
