--- a/styles/hero.css
+++ b/styles/hero.css
@@ -4,7 +4,7 @@
     height: 352px;
     align-items: flex-end;
     color: var(--blanco-100);
-    padding: 0 10rem;
+    padding: 0 10%;
 }
 
 .hero__container {
