--- a/styles/footer.css
+++ b/styles/footer.css
@@ -3,5 +3,5 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 2rem 10rem;
+    padding: 2rem 10%;
 }
